# spybot-rust

./: Cargo.toml
.github/workflows/: rust.yml
src/: config.rs  db.rs  db_scheme.rs  listener.rs  main.rs  ts_interface.rs  user.rs
ts3-rs/.git.old/: COMMIT_EDITMSG  config  index  packed-refs
ts3-rs/.git.old/logs/refs/heads/: master
ts3-rs/.git.old/logs/refs/remotes/origin/: HEAD
ts3-rs/.git.old/objects/pack/: pack-55549d423a879667e360508b62e8184957d4b5aa.idx  pack-55549d423a879667e360508b62e8184957d4b5aa.pack
ts3-rs/.git.old/refs/heads/: master
ts3-rs/ts3/src/: client.rs  event.rs  lib.rs
